--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,12 @@
+[workspace]
+members = [
+    ".",
+]
+exclude = [
+    "programs/flash-loan-receiver",
+]
+resolver = "2"
+
 [package]
 name = "solana-streamer-sdk"
 version = "0.5.0"
