--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,9 @@ spl-token = "8.0.0"
 spl-token-2022 = "9.0.0"
 solana-commitment-config = { version = "3.0.0", features = ["serde"] }
 tonic-prost = "0.14.2"
+reqwest = { version = "0.11", features = ["json"] }
+pyth-sdk = "0.8.0"
+pyth-sdk-solana = { path = "/Users/pblaze/Documents/repos/clients/solana-mev-client/pyth-sdk-solana" }
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
