--- a/market-streaming/Cargo.toml
+++ b/market-streaming/Cargo.toml
@@ -5,16 +5,22 @@ edition = "2021"
 
 [dependencies]
 solana-sdk = "3.0.0"
+solana-client = "3.0.0"
 borsh = { version = "1.5.3", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2.0"
 anyhow = "1.0"
 hex = "0.4"
+base64 = "0.22"
 
-# Yellowstone gRPC integration
+# WebSocket support
+tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
+tungstenite = "0.24"
+
+# Yellowstone gRPC integration (kept for future use)
 yellowstone-grpc-client = "9.0.0"
-yellowstone-grpc-proto = "9.0.0"
+yellowstone-grpc-proto = { version = "9.0.0", features = ["tonic"] }
 
 # Concurrent collections
 dashmap = "6.0.1"
@@ -27,10 +33,18 @@ tracing = "0.1"
 
 # TLS support
 rustls = { version = "0.23.23", features = ["ring"], default-features = false }
+rustls-native-certs = "0.8.1"
 
 # Use the local dex-idl-parser
 dex-idl-parser = { path = "../dex-idl-parser" }
 solana-streamer-sdk = "0.5.0"
+env_logger = "0.11"
+clap = { version = "4.4", features = ["derive", "env"] }
 
 [dev-dependencies]
 env_logger = "0.11"
+dotenv = "0.15"
+
+[[bin]]
+name = "market-streaming-service"
+path = "src/bin/service.rs"
